--- a/.github/workflows/pdf.yml
+++ b/.github/workflows/pdf.yml
@@ -6,8 +6,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Compile
-        uses: xu-cheng/texlive-action/full@v2
+        uses: xu-cheng/texlive-action@v2
         with:
+          scheme: full
           run: |
             latexmk -pdf PICCOLLECTION.tex
             latexmk -pdf DAMPER.tex
